# animations

./: CMakeLists.txt  build.bat
shaders/: fragment_shader.frag
src/: main.cpp
